@@ -38,10 +38,11 @@ package org.opennms.netmgt.linkd;
 
 import java.net.InetAddress;
 /**
- * @author antonio
+ * <p>RouterInterface class.</p>
  *
+ * @author antonio
+ * @version $Id: $
  */
-
 public class RouterInterface {
 	
 	int ifindex;
@@ -83,80 +84,133 @@ public class RouterInterface {
 	}
 
 	/**
+	 * <p>Getter for the field <code>ifindex</code>.</p>
+	 *
 	 * @return Returns the ifindex.
 	 */
 	public int getIfindex() {
 		return ifindex;
 	}
 	/**
+	 * <p>Getter for the field <code>metric</code>.</p>
+	 *
 	 * @return Returns the metric.
 	 */
 	public int getMetric() {
 		return metric;
 	}
 	/**
+	 * <p>Setter for the field <code>metric</code>.</p>
+	 *
 	 * @param metric The metric to set.
 	 */
 	public void setMetric(int metric) {
 		this.metric = metric;
 	}
 	/**
+	 * <p>Getter for the field <code>nextHop</code>.</p>
+	 *
 	 * @return Returns the nextHop.
 	 */
 	public InetAddress getNextHop() {
 		return nextHop;
 	}
 	/**
+	 * <p>Setter for the field <code>nextHop</code>.</p>
+	 *
 	 * @param nextHop The nextHop to set.
 	 */
 	public void setNextHop(InetAddress nextHop) {
 		this.nextHop = nextHop;
 	}
 	/**
+	 * <p>Getter for the field <code>snmpiftype</code>.</p>
+	 *
 	 * @return Returns the snmpiftype.
 	 */
-
 	public int getSnmpiftype() {
 		return snmpiftype;
 	} 
 	
 	/**
+	 * <p>Setter for the field <code>snmpiftype</code>.</p>
+	 *
 	 * @param snmpiftype The snmpiftype to set.
 	 */
 	public void setSnmpiftype(int snmpiftype) {
 		this.snmpiftype = snmpiftype;
 	}
 	
+	/**
+	 * <p>getNetmask</p>
+	 *
+	 * @return a {@link java.net.InetAddress} object.
+	 */
 	public InetAddress getNetmask() {
 		return nextHopNetmask;
 	}
+	/**
+	 * <p>setNetmask</p>
+	 *
+	 * @param netmask a {@link java.net.InetAddress} object.
+	 */
 	public void setNetmask(InetAddress netmask) {
 		this.nextHopNetmask = netmask;
 	}
+	/**
+	 * <p>getNextHopNodeid</p>
+	 *
+	 * @return a int.
+	 */
 	public int getNextHopNodeid() {
 		return nextHopnodeid;
 	}
+	/**
+	 * <p>setNextHopNodeid</p>
+	 *
+	 * @param nexhopnodeid a int.
+	 */
 	public void setNextHopNodeid(int nexhopnodeid) {
 		this.nextHopnodeid = nexhopnodeid;
 	}
+	/**
+	 * <p>Getter for the field <code>nextHopIfindex</code>.</p>
+	 *
+	 * @return a int.
+	 */
 	public int getNextHopIfindex() {
 		return nextHopIfindex;
 	}
+	/**
+	 * <p>Setter for the field <code>nextHopIfindex</code>.</p>
+	 *
+	 * @param nextHopIfindex a int.
+	 */
 	public void setNextHopIfindex(int nextHopIfindex) {
 		this.nextHopIfindex = nextHopIfindex;
 	}
 
+	/**
+	 * <p>Setter for the field <code>ifindex</code>.</p>
+	 *
+	 * @param ifindex a int.
+	 */
 	public void setIfindex(int ifindex) {
 		this.ifindex = ifindex;
 	}
 	
+	/**
+	 * <p>getNextHopNet</p>
+	 *
+	 * @return a {@link java.net.InetAddress} object.
+	 */
 	public InetAddress getNextHopNet() {
 		byte[] ipAddress = nextHop.getAddress();
 		byte[] netMask = nextHopNetmask.getAddress();
 		byte[] netWork = new byte[4];
 
 		for (int i=0;i< 4; i++) {
-			netWork[i] = new Integer(ipAddress[i] & netMask[i]).byteValue();
+			netWork[i] = Integer.valueOf(ipAddress[i] & netMask[i]).byteValue();
 			
 		}
 		try {
@@ -166,13 +220,18 @@ public class RouterInterface {
 		}
 	}
 
+	/**
+	 * <p>getRouteNet</p>
+	 *
+	 * @return a {@link java.net.InetAddress} object.
+	 */
 	public InetAddress getRouteNet() {
 		byte[] ipAddress = routedest.getAddress();
 		byte[] netMask = routemask.getAddress();
 		byte[] netWork = new byte[4];
 
 		for (int i=0;i< 4; i++) {
-			netWork[i] = new Integer(ipAddress[i] & netMask[i]).byteValue();
+			netWork[i] = Integer.valueOf(ipAddress[i] & netMask[i]).byteValue();
 			
 		}
 		try {
@@ -182,22 +241,47 @@ public class RouterInterface {
 		}
 	}
 
+	/**
+	 * <p>getRouteDest</p>
+	 *
+	 * @return a {@link java.net.InetAddress} object.
+	 */
 	public InetAddress getRouteDest() {
 		return routedest;
 	}
 
+	/**
+	 * <p>setRouteDest</p>
+	 *
+	 * @param routedest a {@link java.net.InetAddress} object.
+	 */
 	public void setRouteDest(InetAddress routedest) {
 		this.routedest = routedest;
 	}
 
+	/**
+	 * <p>Getter for the field <code>routemask</code>.</p>
+	 *
+	 * @return a {@link java.net.InetAddress} object.
+	 */
 	public InetAddress getRoutemask() {
 		return routemask;
 	}
 
+	/**
+	 * <p>Setter for the field <code>routemask</code>.</p>
+	 *
+	 * @param routemask a {@link java.net.InetAddress} object.
+	 */
 	public void setRoutemask(InetAddress routemask) {
 		this.routemask = routemask;
 	}
 	
+	/**
+	 * <p>toString</p>
+	 *
+	 * @return a {@link java.lang.String} object.
+	 */
 	public String toString() {
 		String stringa = "";
 		stringa += "routedest = " + routedest + "\n"; 
